--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <img src="assets/profile.png" alt="Njeri Nduati" class="profile-pic"/>
   <h1>Njeri Nduati</h1>
   <p>Data Analyst | Turning raw data into impactful insights</p>
-  <a href="assets/resume.pdf" class="btn" download>📄 Download Resume</a>
+  <a href="assets/NJERI NDUATI RESUME JUNE 2025.pdf" class="btn" download>📄 Download Resume</a>
 </header>
 
 
